--- a/casbin.conf
+++ b/casbin.conf
@@ -1,8 +1,8 @@
 [request_definition]
-r = sub, dom, obj, act
+r = sub, dom, obj, act, res_id
 
 [policy_definition]
-p = sub, dom, obj, act
+p = sub, dom, obj, act, res_id
 
 [role_definition]
 g = _, _, _
@@ -11,4 +11,4 @@ g = _, _, _
 e = some(where (p.eft == allow))
 
 [matchers]
-m = g(r.sub, p.sub, r.dom) && (r.dom == p.dom || p.dom == "*") && (r.obj == p.obj || p.obj == "*") && (r.act == p.act || p.act == "*") 
+m = g(r.sub, p.sub, r.dom) && (r.dom == p.dom || p.dom == "*") && (r.obj == p.obj || p.obj == "*") && (r.act == p.act || p.act == "*") && (r.res_id == p.res_id || p.res_id == "*") 
